--- a/app/globals.css
+++ b/app/globals.css
@@ -52,6 +52,8 @@ body {
 }
 
 .follow {
+  position: absolute;
+  top: 100;
   display: flex;
   flex-direction: column;
   gap: 12px;
@@ -81,13 +83,21 @@ body {
 } */ 
 
 .followText {
+  position: relative;
+  left: 0;
+  top: 180;
+  /* bottom: ; */
   background-color: #dd4c62;
   font-size: 12px;
-  /* rotate: 90deg; */
+  rotate: 90deg;
   width: max-content;
   height: 100%;
-  /* transform-origin: left top; */
-  transform: rotate(90deg) translateY(-5px);
+  /* margin-right: -0px; */
+  /* margin-top: -80px; */
+    background-color: #dd4c62;
+  padding: 10px;
+  transform-origin: left top;
+  transform: rotate(90deg) translateY(-45px);
   padding: 0 8px;
   display: flex;
   align-items: center;
@@ -125,8 +135,44 @@ body {
   font-size: 20px;
 }
 
-  .follow,
-  .bubbleContainer,
+  
+  /* .bubbleContainer, */
   .certificate {
     display: none;
   }
+
+
+.bubbleContainer {
+  width: 100%; /* or desired width */
+  max-width: 600px;  /* optional max-width */
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  align-content: end;
+  justify-content: flex-start; /* prevent stretching */
+}
+
+
+.bubble {
+  width: 100%;
+  height: 100px;
+  background-color: white;
+  color: #555;
+  padding: 24px;
+  font-size: 18px;
+  border-radius: 20px 20px 0px 20px;
+}
+
+.bubble {
+  white-space: normal; /* allow multiline wrap */
+  overflow-wrap: break-word; /* break long words */
+}
+
+.bubbleContainer img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+  background-color: #dd4c62;
+  flex-shrink: 0; /* prevents shrinking */
+}
