--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 :root {
   --background: #ffffff;
@@ -19,13 +19,13 @@
   }
 }
 
-section{
+section {
   height: 100vh;
   scroll-snap-align: center;
   overflow: hidden;
 }
 
-html{
+html {
   scroll-snap-type: y mandatory;
   scroll-behavior: smooth;
 }
@@ -42,7 +42,6 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  
 }
 
 .hTitle {
@@ -75,12 +74,12 @@ body {
   height: 100%;
   transform-origin: left top;
   /* margin-top: 0px; */
-  /* transform: rotate(90deg) translateY(-40px);
+/* transform: rotate(90deg) translateY(-40px);
   padding: 0 8px;
   display: flex;
   align-items: center;
   border-bottom-right-radius: 10px;
-} */ 
+} */
 
 .followText {
   position: relative;
@@ -94,7 +93,7 @@ body {
   height: 100%;
   /* margin-right: -0px; */
   /* margin-top: -80px; */
-    background-color: #dd4c62;
+  background-color: #dd4c62;
   padding: 10px;
   transform-origin: left top;
   transform: rotate(90deg) translateY(-45px);
@@ -129,22 +128,19 @@ body {
   justify-content: center;
 }
 
-
 .circleText {
   letter-spacing: 3px;
   font-size: 20px;
 }
 
-  
-  /* .bubbleContainer, */
-  .certificate {
-    display: none;
-  }
-
+/* .bubbleContainer, */
+.certificate {
+  display: none;
+}
 
 .bubbleContainer {
   width: 100%; /* or desired width */
-  max-width: 600px;  /* optional max-width */
+  max-width: 600px; /* optional max-width */
   display: flex;
   align-items: center;
   gap: 8px;
@@ -152,8 +148,7 @@ body {
   justify-content: flex-start; /* prevent stretching */
 }
 
-
-.bubble {
+/* .bubble {
   width: 100%;
   height: 100px;
   background-color: white;
@@ -164,15 +159,31 @@ body {
 }
 
 .bubble {
-  white-space: normal; /* allow multiline wrap */
-  overflow-wrap: break-word; /* break long words */
+  white-space: normal; 
+  overflow-wrap: break-word;
+} */
+
+.bubble {
+  width: 100%;
+  height: 100px;
+  background-color: white;
+  color: #555;
+  padding: 24px;
+  font-size: 18px;
+  border-radius: 20px 20px 0px 20px;
+  min-width: 350px; /* Minimum width */
+  max-width: 350px; /* Or any other fixed width */
+  margin: 0 auto 0 0; /* stick to right align */
+  /* right: 10%; */
 }
 
 .bubbleContainer img {
-  width: 50px;
+  /* width: 50px; */
+  width: 100%;
   height: 50px;
   border-radius: 50%;
   object-fit: cover;
   background-color: #dd4c62;
   flex-shrink: 0; /* prevents shrinking */
+  /* margin-bottom: 20px; */
 }
